Change layout of page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 </head>
 <body>
   <div id="main">
-    <div id="drawing-canvas">
+    <div id="header">
+      <h1>Etch-a-Sketch!</h1>
+    </div>
+    <div id="main-container">
+      <div id="left-toolbar">
+        <button id="resolution-button">
+          Change Resolution
+        </button>
+      </div>
+      <div id="drawing-canvas">
 
+      </div>
+      <div id="right-toolbar">
+        <button>button</button>
+      </div>
     </div>
   </div>
 </body>
