Add button to clear canvas

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <div id="main-container">
       <div id="left-toolbar">
-        <button id="resolution-button">
-          Change Resolution
+        <button id="clear-canvas-button">
+          Clear All
         </button>
       </div>
       <div id="drawing-canvas">
