Add button to change canvas resolution

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <button id="clear-canvas-button">
           Clear All
         </button>
+        <button id="set-resolution-button">
+          Change Resolution
+        </button>
       </div>
       <div id="drawing-canvas">
 
