Add button to remove/enable canvas element borders

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <button id="set-resolution-button">
           Change Resolution
         </button>
+        <button id="toggle-borders-button" data-borders="on">
+          Remove Borders
+        </button>
       </div>
       <div id="drawing-canvas">
 
