Add buttons to select brush or eraser

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
       </div>
       <div id="right-toolbar">
-        <button>button</button>
+        <button id="brush-button">Brush</button>
+        <button id="eraser-button">Eraser</button>
       </div>
     </div>
   </div>
