Add fill option

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div id="right-toolbar">
         <button id="brush-button">Brush</button>
         <button id="eraser-button">Eraser</button>
+        <button id="fill-button">Fill</butoon>
       </div>
     </div>
   </div>
