Add color palette with predefined colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <div id="right-toolbar">
         <button id="brush-button">Brush</button>
         <button id="eraser-button">Eraser</button>
-        <button id="fill-button">Fill</butoon>
+        <button id="fill-button">Fill</button>
+        <div id="color-palette">
+
+        </div>
       </div>
     </div>
   </div>
