--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <button id="brush-button">Brush</button>
         <button id="eraser-button">Eraser</button>
         <button id="fill-button">Fill</button>
+        <div id="add-color">
+          <button id="add-color-button">Add Color</button>
+          <input id="add-color-choose-color" type="color">
+        </div>
         <div id="color-palette">
 
         </div>
