Add option to remove colors from color palette

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <button id="add-color-button">Add Color</button>
           <input id="add-color-choose-color" type="color">
         </div>
+        <button id="remove-color-button">Remove Colors</button>
         <div id="color-palette">
 
         </div>
