Add option to change opacity of colors

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         <div id="color-palette">
 
         </div>
+        <div>
+          <div id="opacity-header">
+            <p>Change Opacity</p>
+            <div id="opacity-number"></div>
+          </div>
+          <div id="opacity-content">
+            <input type="range" min="10" max="100" value="100" step="1" id="opacity-slider">
+            <div id="opacity-color-preview"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
