Change how users set new canvas dimensions

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
         <button id="clear-canvas-button">
           Clear All
         </button>
-        <button id="set-resolution-button">
-          Change Resolution
-        </button>
         <button id="toggle-borders-button" data-borders="on">
           Remove Borders
         </button>
+        <div id="set-dimensions-container">
+          <button id="set-dimensions-view-options">
+            Change Dimensions
+          </button>
+
+        </div>
       </div>
       <div id="drawing-canvas">
 
